--- a/.github/workflows/describe_instance.yml
+++ b/.github/workflows/describe_instance.yml
@@ -7,5 +7,12 @@ jobs:
     describe:
         runs-on: ubuntu-latest
         steps:
+            - name: Configure AWS credentials
+              uses: aws-actions/configure-aws-credentials@v2
+              with:
+                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                aws-region: us-east-1  # ou outra região que você esteja usando
+
             - name: Describe AWS EC2 instances
               run: aws ec2 describe-instances
