--- a/.github/workflows/describe_instance.yml
+++ b/.github/workflows/describe_instance.yml
@@ -12,7 +12,7 @@ jobs:
               with:
                 aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
                 aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                aws-region: us-east-1  # ou outra região que você esteja usando
+                aws-region: us-east-1 
 
             - name: Describe AWS EC2 instances
               run: aws ec2 describe-instances
